Add tracked connections
